# sdk

./: .gitattributes  .gitignore  BuildCommon.targets  Home.md  LICENSE.md  README.md  Ruyi.cpp.props  SDK.sln  SDKCommon.targets  SwitchOS.cmd  docs.code-workspace  doxygen.cfg  mkdocs.yml  readme.md  readme.txt  temp.md
DocTests/: DocTests.cs  DocTests.csproj
NetCore.Base/: NetCore.Base.csproj  Protocols.cs
SDK.Gen.Rust/: Cargo.toml
SDK.Gen.Rust/src/: brain_cloud_service_s_d_k_data_types.rs  brain_cloud_service_s_d_k_services.rs  common_type_s_d_k_data_types.rs  common_type_s_d_k_services.rs  constants_s_d_k_data_types.rs  constants_s_d_k_services.rs  external_errors_s_d_k_data_types.rs  external_errors_s_d_k_services.rs  games_d_b_s_d_k_data_types.rs  games_d_b_s_d_k_services.rs  http_s_d_k_data_types.rs  http_s_d_k_services.rs  input_manager_s_d_k_data_types.rs  input_manager_s_d_k_services.rs  lib.rs  localization_service_s_d_k_data_types.rs  localization_service_s_d_k_services.rs  media_s_d_k_data_types.rs  media_s_d_k_services.rs  notification_s_d_k_data_types.rs  notification_s_d_k_services.rs  overlay_manager_s_d_k_data_types.rs  overlay_manager_s_d_k_services.rs  pub_sub_s_d_k_data_types.rs  pub_sub_s_d_k_services.rs  s_d_k_validator_s_d_k_services.rs  setting_system_s_d_k_data_types.rs  setting_system_s_d_k_services.rs  speech_service_s_d_k_data_types.rs  speech_service_s_d_k_services.rs  storage_layer_s_d_k_data_types.rs  storage_layer_s_d_k_services.rs  user_service_external_s_d_k_data_types.rs  user_service_external_s_d_k_services.rs
docs/: LANGS.md  (+4 more)
(+824 files in other folders)
