[package]
name = "subor-rs"
version = "0.9.2"
authors = ["Jake W <jake@playruyi.com>"]
repository = "https://github.com/subor/sdk"
homepage = "http://www.playzplus.com/"
description = "Subor Z+/Ruyi SDK"
license = "MIT"
keywords = ["subor", "zplus", "ruyi"]

[dependencies]
thrift = { version = "1.0.0", path = "../../../../thrift/lib/rs" }
ordered-float = "1.0"
try_from = "0.2"